Improve DefaultGenreService tests